# developing-tools

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/: dependabot.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yaml  feature_request.yaml
.github/workflows/: codeql.yaml  coverage.yaml  format.yaml  lint.yaml  publish.yaml  test.yaml
developing_tools/: __init__.py
developing_tools/context_managers/: __init__.py  execution_time_manager.py
developing_tools/functions/: __init__.py  exclusive_parameters.py  execution_time.py  print_parameters.py  retryit.py  timeout.py
developing_tools/patterns/: __init__.py  singleton_pattern.py
developing_tools/utils/: argument_class.py
scripts/: format.sh  test.sh
tests/context_managers/: test_execution_time_manager.py
tests/patterns/: test_singleton_pattern.py
