[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'


[tool.hatch.version]
path = 'developing_tools/__init__.py'

[tool.hatch.build.targets.sdist]
include = ['developing_tools/', 'tests/', 'requirements*.txt']


[project]
name = 'developing-tools'
description = 'Package designed to enhance the development process by providing a collection of tools/utilities'
readme = 'README.md'
authors = [{ name = 'Adria Montoto' }]
license = 'MIT'
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Typing :: Typed',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
]
keywords = ['python', 'development', 'tools', 'utilities', 'decorator']
requires-python = '>=3.11'
dynamic = ['version']

[project.urls]
Homepage = 'https://github.com/adriamontoto/developing-tools'
Repository = 'https://github.com/adriamontoto/developing-tools'
Issues = 'https://github.com/adriamontoto/developing-tools/issues'
